--- a/recepcionista/templates/recepcionista_pacientes_activos.html
+++ b/recepcionista/templates/recepcionista_pacientes_activos.html
@@ -9,11 +9,12 @@
 
 {% block content %}
 <div class="recepcionista-container">
-    <div class="header_right">
+    <div class="header">
         <a href="{% url 'agregar_paciente' %}" class="agregar-paciente-btn">
             <span class="icono">+</span> Agregar Paciente
         </a>
-    </div>  
+    </div>
+</div>
 
     <form class="busqueda-form">
         <div class="busqueda-input">
