--- a/terapeuta/templates/paciente_terapeuta.html
+++ b/terapeuta/templates/paciente_terapeuta.html
@@ -1,29 +1,42 @@
 {% extends 'terapeuta_base.html' %}
-
 {% load static %}
+
+{% block extra_head %} 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'css/paciente_terapeuta.css' %}">
+{% endblock %}
 
 {% block title %}Pacientes{% endblock %}
 
+{% block header %}
+    <div class="contenedor-header">
+        <h1>Pacientes</h1>
+        <form method="GET" action="{% url 'paciente_terapeuta' %}" class="search-container">
+            <input type="text" name="search" placeholder="Búsqueda por Nombre, Rut o Tratamiento" class="search-bar" id="searchBar" value="{{ request.GET.search|default:'' }}" oninput="toggleClearButton()">
+            <img src="{% static 'icons/Lupa.svg' %}" alt="Buscar" class="search-icon">
+            
+            <button type="button" id="clearButton" class="clear-button" onclick="clearSearch()" style="display: {% if request.GET.search %}inline-block{% else %}none{% endif %};">
+                Limpiar Filtro
+            </button>
+        </form>
+    </div>
+{% endblock %}
+
+
 {% block content %}
 <div class="container">
-    <header class="header">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-        <h1>Pacientes</h1>
-        <!-- Contenedor para la barra de búsqueda y el icono -->
-        <div class="search-container">
-            <input type="text" placeholder="Búsqueda por Nombre, Rut o Tratamiento" class="search-bar" id="searchBar" onkeyup="searchPacientes()">
-            <img src="{% static 'icons/Lupa.svg' %}" alt="Lupa" class="search-icon" id="searchIcon">
-        </div>
-    </header>
-    <div class="header">
-        <h2>Nombre</h2>
+    <!-- Cabecera de la tabla de pacientes -->
+    <div class="titulos-atributos">
+        <h2 class="nombre">Nombre</h2>
         <h2 class="rut">Rut</h2>
         <h2 class="edad">Edad</h2>
         <h2 class="tratamiento">Tratamiento</h2>
     </div>
+    
+    <!-- Lista de pacientes -->
+    {% if pacientes %}
     <div class="li-container">
         <ul id="pacienteList">
-            <!-- Lista de pacientes -->
             {% for paciente in pacientes %}
             <li class="paciente">
                 <div class="paciente-info">
@@ -41,51 +54,32 @@
             {% endfor %}
         </ul>
     </div>
-    <!-- Paginación -->
-    {% if total_pacientes > 5 %}
-    <div class="pagination">
-        {% if pacientes.has_previous %}
-            <a href="?page={{ pacientes.previous_page_number }}" class="prev-button">
-                <img src="{% static 'icons/chevron-left-solid.svg' %}" alt="Back" class="previous-icon">
-            </a>
-        {% endif %}
-        <span id="pageNumber">{{ pacientes.number }}</span>
-        {% if pacientes.has_next %}
-            <a href="?page={{ pacientes.next_page_number }}" class="next-button">
-                <img src="{% static 'icons/chevron-right-solid.svg' %}" alt="Next" class="next-icon">
-            </a>
-        {% endif %}
+    {% else %}
+    <!-- Mensaje de no coincidencias -->
+    <div class="no-results">
+        <p>No se encontraron pacientes que coincidan con la búsqueda.</p>
     </div>
     {% endif %}
+    
+    <!-- Paginación -->
+{% if total_pacientes > 6 %}
+<div class="pagination">
+    {% if pacientes.has_previous %}
+        <a href="?search={{ request.GET.search }}&page={{ pacientes.previous_page_number }}" class="prev-button">
+            <img src="{% static 'icons/chevron-left-solid.svg' %}" alt="Anterior" class="previous-icon">
+        </a>
+    {% endif %}
+    <span id="pageNumber">{{ pacientes.number }}</span>
+    {% if pacientes.has_next %}
+        <a href="?search={{ request.GET.search }}&page={{ pacientes.next_page_number }}" class="next-button">
+            <img src="{% static 'icons/chevron-right-solid.svg' %}" alt="Siguiente" class="next-icon">
+        </a>
+    {% endif %}
 </div>
-<link rel="stylesheet" href="{% static 'css/paciente_terapeuta.css' %}">
+{% endif %}
+</div>
 {% endblock %}
 
 {% block extra_js %}
 <script src="{% static 'js/buscar_paciente.js' %}"></script>
-<script>
-    function searchPacientes() {
-        const input = document.getElementById('searchBar').value.toLowerCase();
-        const pacientes = document.querySelectorAll('.paciente');
-        let found = false;
-
-        pacientes.forEach(paciente => {
-            const nombre = paciente.querySelector('.nombre').textContent.toLowerCase();
-            const rut = paciente.querySelector('.rut').textContent.toLowerCase();
-            const tratamiento = paciente.querySelector('.tratamiento').textContent.toLowerCase();
-
-            if (nombre.includes(input) || rut.includes(input) || tratamiento.includes(input)) {
-                paciente.style.display = ''; // Mostrar el paciente
-                found = true;
-            } else {
-                paciente.style.display = 'none'; // Ocultar el paciente
-            }
-        });
-
-        // Puedes agregar lógica aquí para mostrar un mensaje si no se encuentran resultados
-        if (!found) {
-            console.log('No se encontraron pacientes.');
-        }
-    }
-</script>
 {% endblock %}
