--- a/administrador/static/css/editar_datos_paciente_admin.css
+++ b/administrador/static/css/editar_datos_paciente_admin.css
@@ -47,18 +47,19 @@ input[type="date"],
 input[type="tel"],
 input[type="email"],
 input[type="number"]{
-    width: 80%;
+    width: 325px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     height: 40px;
     box-sizing: border-box;
+    margin-right: 25px; /* Ajusta el espacio entre los elementos a la derecha */
 }
 
 textarea {
     resize: vertical;
     height: 140px;
-    width: 87%;
+    width: 93%;
     border: 1px solid #ccc;
 }
 
@@ -85,4 +86,23 @@ button {
 .confirm {
     background-color: #006A60;
     color: white;
+}
+
+.terapeuta-contenedor {
+    display: flex;
+    align-items: center;
+    margin-left: 0px;
+}
+
+.terapeuta-contenedor input{
+    margin-right: 0px;
+}
+.btn-azul {
+    background-color: #001058;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 8px 10px;
+    font-size: 14px;
+    cursor: pointer;
 }
