--- a/administrador/templates/editar_datos_paciente_admin.html
+++ b/administrador/templates/editar_datos_paciente_admin.html
@@ -1,88 +1,95 @@
-{% extends 'base_recepcionista.html' %}
+{% extends 'base_admin.html' %}
 {% load static %}
 {% block content %}
 <head>
     <link rel = "stylesheet" href="{% static 'css/editar_datos_paciente_admin.css' %}">
-    <div class="container">
-        <div class="header">
-            <h1>Editar Paciente</h1>
-        </div>
+    <form method="POST" action="{% url 'editar_datos_paciente_admin' paciente.id %}">
+        {% csrf_token %}
 
-        <div class="form-group">
-            <div class="campo campo-nombres">
-                <label for="nombres">Nombres:</label>
-                <input type="text" id="nombres" name="nombres" value = "{{ paciente.first_name }}" required>
+        <div class="container">
+            <div class="header">
+                <h1>Editar Paciente</h1>
             </div>
-            <div class="campo campo-apellidos">
-                <label for="apellidos">Apellidos:</label>
-                <input type="text" id="apellidos" name="apellidos" value = "{{ paciente.last_name }}" required>
-            </div>
-        </div>
-        
-        <div class="form-group">
-            <div class="campo campo-rut">
-                <label for="rut">RUT:</label>
-                <input type="text" id="rut" name="rut" value = "{{ paciente.rut }}" required>
-            </div>
-            <div class="campo campo-proximaCita">
-                <label for="proximaCita">Próxima Cita:</label>
-                <input type="date" id="proximaCita" name="proximaCita" required>
-            </div>
-        </div>
-        
-        <div class="form-group">
-            <div class="campo campo-telefono">
-                <label for="telefono">Número de Teléfono:</label>
-                <input type="tel" id="telefono" name="telefono" value = "{{ paciente.telefono }}" required>
-            </div>
-            <div class="campo campo-correo">
-                <label for="correo">Correo Electrónico:</label>
-                <input type="email" id="correo" name="correo" value = "{{ paciente.email }}" required>
-            </div>
-        </div>
-        
-        <div class="form-group">
-            <div class="campo campo-sexo">
-                <label for="sexo">Sexo:</label>
-                <select id="sexo" name="sexo" required>
-                    <option value="masculino" 
-                    {% if paciente.sexo|lower == "masculino" or paciente.sexo|lower == "m" %}selected{% endif %}>
-                    Masculino
-                </option>
-                <option value="femenino" 
-                {% if paciente.sexo|lower == "femenino" or paciente.sexo|lower == "f" %}selected{% endif %}>
-                Femenino
-                </option>
-                </select>
-            </div>
-            <div class="campo campo-edad">
-                <label for="edad">Fecha de Nacimiento:</label>
-                <input type="date" id="edad" name="edad" value = "{{ paciente.date}}" required>
-            </div>
-        </div>
-        
-        <div class="form-group">
-            <div class="campo campo-patologia">
-                <label for="patologia">Patología:</label>
-                <input type="text" id="patologia" name="patologia" value = "{{ paciente.patologia }}" required>
-            </div>
-            <div class="campo campo-terapeuta">
-                <label for="terapeuta">Terapeuta a Cargo:</label>
-                <div class="terapeuta-contenedor">
-                    <input type="text" id="terapeuta" name="terapeuta" value="{% if paciente.terapeuta %}{{paciente.terapeuta.user.first_name}} {% else %} Sin Terapeuta {% endif %}" readonly>
-                    <button type="button" class="btn-azul">Reasignar Terapeuta</button>
+            
+            <div class="form-group">
+                <div class="campo campo-nombres">
+                    <label for="nombres">Nombres:</label>
+                    <input type="text" id="nombres" name="nombres" value = "{{ paciente.first_name }}" required>
+                </div>
+                <div class="campo campo-apellidos">
+                    <label for="apellidos">Apellidos:</label>
+                    <input type="text" id="apellidos" name="apellidos" value = "{{ paciente.last_name }}" required>
                 </div>
             </div>
+            
+            <div class="form-group">
+                <div class="campo campo-rut">
+                    <label for="rut">RUT:</label>
+                    <input type="text" id="rut" name="rut" value = "{{ paciente.rut }}" required>
+                </div>
+                <!-- <div class="campo campo-proximacita">
+                    <label for="proximaCita">Próxima Cita:</label>
+                    <div class ="proximacita-contenedor">
+                        <input type="date" id="proximaCita" name="proximaCita" value="{{ paciente.proximaCita|date:'Y-m-d' }}" readonly>
+                        <button type="button" class="btn-reagendar">Reagendar Cita</button>
+                    </div>
+                </div> -->
+            </div>
+            
+            <div class="form-group">
+                <div class="campo campo-telefono">
+                    <label for="telefono">Número de Teléfono:</label>
+                    <input type="tel" id="telefono" name="telefono" value = "{{ paciente.telefono }}" required>
+                </div>
+                <div class="campo campo-correo">
+                    <label for="correo">Correo Electrónico:</label>
+                    <input type="email" id="correo" name="correo" value = "{{ paciente.email }}" required>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <div class="campo campo-sexo">
+                    <label for="sexo">Sexo:</label>
+                    <select id="sexo" name="sexo" required>
+                        <option value="masculino" 
+                        {% if paciente.sexo|lower == "masculino" or paciente.sexo|lower == "m" %}selected{% endif %}>
+                        Masculino
+                    </option>
+                    <option value="femenino" 
+                    {% if paciente.sexo|lower == "femenino" or paciente.sexo|lower == "f" %}selected{% endif %}>
+                    Femenino
+                    </option>
+                    </select>
+                </div>
+                <div class="campo campo-fecha_nacimiento">
+                    <label for="fecha_nacimiento">Fecha de Nacimiento:</label>
+                    <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" value="{{ paciente.fecha_nacimiento|date:'Y-m-d' }}" required>
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <div class="campo campo-patologia">
+                    <label for="patologia">Patología:</label>
+                    <input type="text" id="patologia" name="patologia" value = "{{ paciente.patologia }}" required>
+                </div>
+                <div class="campo campo-terapeuta">
+                    <label for="terapeuta">Terapeuta a Cargo:</label>
+                    <div class="terapeuta-contenedor">
+                        <input type="text" id="terapeuta" name="terapeuta" value="{% if paciente.terapeuta %}{{paciente.terapeuta.user.first_name}} {% else %} Sin Terapeuta {% endif %}" readonly>
+                        <button type="button" class="btn-reasignar">Reasignar Terapeuta</button>
+                    </div>
+                </div>
+            </div>
+            
+            <label for="descripcion">Descripción de la Patología:</label>
+            <textarea id="descripcion" name="descripcion" rows="4"  required>{{ paciente.historial_medico}}</textarea>
+            
+            <div class="buttons">
+                <button type="button" onclick="window.location.href=this.dataset.url" class="cancel" data-url="{% url 'mostrar_paciente_administrador' paciente.id %}">Cancelar</button>
+                <button type="submit" class="confirm">Confirmar Cambios</button>
+            </div>
         </div>
-        
-        <label for="descripcion">Descripción de la Patología:</label>
-        <textarea id="descripcion" name="descripcion" rows="4"  required>{{ paciente.historial_medico}}</textarea>
-        
-        <div class="buttons">
-            <button type="button" onclick="window.location.href='{% url 'mostrar_paciente_administrador' paciente.id %}'" class="cancel">Cancelar</button>
-            <button type="submit" class="confirm">Confirmar Cambios</button>
-        </div>
-    </div>
+    </form>
 </head>
 {% endblock %}
 
