--- a/administrador/static/css/editar_datos_paciente_admin.css
+++ b/administrador/static/css/editar_datos_paciente_admin.css
@@ -1,11 +1,17 @@
 body {
+    overflow: hidden;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start; /* Mantiene la alineación en la parte superior */
+    height: 100vh;
+    margin: 0; /* Sin márgenes adicionales en el body */
 }
 
 .container {
     max-width: 700px;
-    margin: 50px 0 50px 20px;
+    height: auto;
+    margin: 0; /* Eliminé el margen superior para acercar el contenido aún más */
     padding: 20px;
     background-color: transparent;
     box-shadow: none;
@@ -24,16 +30,17 @@ body {
 
 .form-group {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 15px;
 }
 
 /* Clase base para grupos de 2 hacia abajo */
 .campo {
-    flex: 1;
+    flex: 1 1 45%;
     text-align: left;
+    min-width: 300px;
 }
-
 
 label {
     display: block;
@@ -46,8 +53,9 @@ input[type="text"],
 input[type="date"],
 input[type="tel"],
 input[type="email"],
-input[type="number"]{
+input[type="number"] {
     width: 325px;
+    width: 80%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -59,23 +67,67 @@ input[type="number"]{
 textarea {
     resize: vertical;
     height: 140px;
-    width: 93%;
+    width: 87%;
     border: 1px solid #ccc;
 }
 
 .buttons {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin-top: 20px;
 }
 
 button {
-    width: 200px;
+    width: 175px;
     padding: 15px;
     border: none;
     border-radius: 20px;
     cursor: pointer;
-    margin: 0 25px;
+    margin: 0 10px;
+}
+
+.terapeuta-contenedor,
+.proximacita-contenedor {
+    display: flex;
+    align-items: center;
+    margin-left: 0;
+    flex-wrap: wrap; /* Permitir que los elementos se envuelvan en pantallas más pequeñas */
+}
+
+.proximacita-contenedor,
+.terapeuta-contenedor {
+    display: flex;
+    align-items: center; /* Alinear verticalmente en el centro */
+    margin-left: 0;
+}
+
+.btn-reasignar,
+.btn-reagendar {
+    background-color: #001058;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    padding: 8px 10px;
+    font-size: 14px;
+    width: 100px;
+    cursor: pointer;
+}
+
+/* Media Queries para pantallas más pequeñas */
+@media (max-width: 768px) {
+    .header h1 {
+        font-size: 2em; /* Hacer el tamaño de la fuente más pequeño en pantallas pequeñas */
+    }
+
+    button {
+        width: 100%; /* Hacer que los botones ocupen el ancho completo en pantallas pequeñas */
+        margin: 10px 0; /* Espaciado vertical entre botones */
+    }
+
+    .campo {
+        flex: 1 1 100%; /* Hacer que cada campo ocupe el 100% del ancho en pantallas pequeñas */
+    }
 }
 
 .cancel {
@@ -86,42 +138,4 @@ button {
 .confirm {
     background-color: #006A60;
     color: white;
-}
-
-.terapeuta-contenedor {
-    display: flex;
-    align-items: center;
-    margin-left: 0px;
-}
-
-.terapeuta-contenedor input{
-    margin-right: 0px;
-}
-.btn-reasignar {
-    background-color: #001058;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    padding: 8px 10px;
-    font-size: 14px;
-    cursor: pointer;
-}
-
-.proximacita-contenedor {
-    display: flex;
-    align-items: center;
-    margin-left: 0px;
-}
-
-.proximacita-contenedor input{
-    margin-right: 0px;
-}
-.btn-reagendar {
-    background-color: #001058;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    padding: 8px 10px;
-    font-size: 14px;
-    cursor: pointer;
 }
