--- a/administrador/templates/editar_datos_paciente_admin.html
+++ b/administrador/templates/editar_datos_paciente_admin.html
@@ -27,13 +27,24 @@
                     <label for="rut">RUT:</label>
                     <input type="text" id="rut" name="rut" value = "{{ paciente.rut }}" required>
                 </div>
-                <!-- <div class="campo campo-proximacita">
+                <div class="campo campo-proximacita">
                     <label for="proximaCita">Próxima Cita:</label>
-                    <div class ="proximacita-contenedor">
-                        <input type="date" id="proximaCita" name="proximaCita" value="{{ paciente.proximaCita|date:'Y-m-d' }}" readonly>
-                        <button type="button" class="btn-reagendar">Reagendar Cita</button>
+                    <div class="proximacita-contenedor">
+                        <input type="date" id="proximaCita" name="proximaCita" value="{{ paciente.fecha_nacimiento|date:'Y-m-d' }}" readonly>
+                        <script>
+                            function redirigir() {
+                                window.location.href = "{% url 'listado_terapeutas' paciente.id %}";
+                                
+                                setTimeout(function() {
+                                    window.location.href = "{% url 'agendar_cita_administrador' %}";
+                                }, 1000);
+                            }
+                        </script>
+                        <button type="button" class="btn-reagendar" onclick="redirigir()">
+                            Reagendar
+                        </button>
                     </div>
-                </div> -->
+                </div>
             </div>
             
             <div class="form-group">
@@ -54,11 +65,15 @@
                         <option value="masculino" 
                         {% if paciente.sexo|lower == "masculino" or paciente.sexo|lower == "m" %}selected{% endif %}>
                         Masculino
-                    </option>
-                    <option value="femenino" 
-                    {% if paciente.sexo|lower == "femenino" or paciente.sexo|lower == "f" %}selected{% endif %}>
-                    Femenino
-                    </option>
+                        </option>
+                        <option value="femenino" 
+                        {% if paciente.sexo|lower == "femenino" or paciente.sexo|lower == "f" %}selected{% endif %}>
+                        Femenino
+                        </option>
+                        <option value="otro"
+                        {% if paciente.sexo|lower == "otro" or paciente.sexo|lower == "o" %}selected{% endif %}>
+                        Otro
+                        </option>
                     </select>
                 </div>
                 <div class="campo campo-fecha_nacimiento">
@@ -76,7 +91,9 @@
                     <label for="terapeuta">Terapeuta a Cargo:</label>
                     <div class="terapeuta-contenedor">
                         <input type="text" id="terapeuta" name="terapeuta" value="{% if paciente.terapeuta %}{{paciente.terapeuta.user.first_name}} {% else %} Sin Terapeuta {% endif %}" readonly>
-                        <button type="button" class="btn-reasignar">Reasignar Terapeuta</button>
+                        <button type="button" class="btn-reasignar" onclick="window.location.href=this.dataset.url" data-url="{% url 'listado_terapeutas' paciente.id %}">
+                            Reasignar
+                        </button>
                     </div>
                 </div>
             </div>
@@ -92,4 +109,3 @@
     </form>
 </head>
 {% endblock %}
-
