--- a/ortesisWeb/static/css/base/sidebar.css
+++ b/ortesisWeb/static/css/base/sidebar.css
@@ -244,7 +244,7 @@
     .menu {
         display: flex;
         flex-flow: row nowrap; /* Los ítems del menú se colocan en una fila */
-        justify-content: space-between;
+        justify-content: space-around;
         width: 100%; /* Asegurar que el menú ocupe todo el espacio disponible */
         align-items: center; /* Centrar los ítems del menú verticalmente */
         flex-grow: 1;
